[gd_scene load_steps=26 format=3 uid="uid://l5ic445kl6da"]

[ext_resource type="Script" path="res://assets/scripts/enemy.gd" id="1_8oweg"]
[ext_resource type="Texture2D" uid="uid://c63k7jadehpp7" path="res://assets/sprites/dungeon/goblin_.png" id="2_el4qn"]
[ext_resource type="Script" path="res://assets/scripts/enemy_states/enemy_state_machine.gd" id="2_ln33q"]
[ext_resource type="Script" path="res://assets/scripts/enemy_states/enemy_exploring_state.gd" id="3_o0flm"]
[ext_resource type="Script" path="res://assets/scripts/enemy_states/enemy_dead_state.gd" id="3_snqy6"]
[ext_resource type="Script" path="res://assets/scripts/enemy_states/enemy_fighting_state.gd" id="5_jsl8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iev8x"]
size = Vector2(8, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_b577t"]
atlas = ExtResource("2_el4qn")
region = Rect2(0, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ygpp"]
atlas = ExtResource("2_el4qn")
region = Rect2(24, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_diima"]
atlas = ExtResource("2_el4qn")
region = Rect2(48, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptxqf"]
atlas = ExtResource("2_el4qn")
region = Rect2(72, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_psauy"]
atlas = ExtResource("2_el4qn")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vny8"]
atlas = ExtResource("2_el4qn")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdsye"]
atlas = ExtResource("2_el4qn")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkmoy"]
atlas = ExtResource("2_el4qn")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttq7v"]
atlas = ExtResource("2_el4qn")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn7ii"]
atlas = ExtResource("2_el4qn")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_td8mp"]
atlas = ExtResource("2_el4qn")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t32ee"]
atlas = ExtResource("2_el4qn")
region = Rect2(72, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dnwc"]
atlas = ExtResource("2_el4qn")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vylwq"]
atlas = ExtResource("2_el4qn")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j8wk"]
atlas = ExtResource("2_el4qn")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvm8q"]
atlas = ExtResource("2_el4qn")
region = Rect2(72, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8l4v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b577t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ygpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diima")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptxqf")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_psauy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vny8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdsye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkmoy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttq7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn7ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td8mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t32ee")
}],
"loop": false,
"name": &"receive_damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dnwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vylwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j8wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvm8q")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_aapxa"]
radius = 50.0

[node name="Goblin" type="CharacterBody2D"]
z_index = 4
position = Vector2(0, -12)
collision_layer = 4
collision_mask = 11
script = ExtResource("1_8oweg")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_ln33q")
initial_state = NodePath("EnemyExploringState")

[node name="EnemyExploringState" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_o0flm")
move_speed = 25
enemy = NodePath("../..")

[node name="EnemyDeadState" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_snqy6")
enemy = NodePath("../..")

[node name="DeathTimer" type="Timer" parent="StateMachine/EnemyDeadState"]

[node name="EnemyFightingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_jsl8j")
enemy = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_iev8x")
debug_color = Color(0.917647, 0.0392157, 0.0352941, 0.419608)

[node name="Animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s8l4v")
animation = &"run"
autoplay = "idle"

[node name="MeleeRange" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(20, 0)
collision_mask = 2

[node name="ExploreRayCast" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(14, 0)

[node name="VisonArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisonArea"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_aapxa")

[connection signal="timeout" from="StateMachine/EnemyDeadState/DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="body_entered" from="VisonArea" to="." method="_on_vison_area_body_entered"]
[connection signal="body_exited" from="VisonArea" to="." method="_on_vison_area_body_exited"]
